[gd_scene load_steps=9 format=2]

[ext_resource path="res://Common/ZCOOLKuaiLe-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Common/gear.png" type="Texture" id=2]
[ext_resource path="res://PauseMenu/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Settings/Settings.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "pause"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0.501961, 0.501961, 0.54902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = 200.0
margin_right = 112.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="."]
anchor_left = -0.000884819
anchor_right = -0.000884819
margin_left = 50.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
rect_scale = Vector2( 1.2, 1.2 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.00157301
anchor_right = 0.5
anchor_bottom = 0.00157301
margin_left = -73.5
margin_top = 318.867
margin_right = 73.5
margin_bottom = 370.867
custom_fonts/font = SubResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/pause = SubResource( 3 )

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -57.0
margin_top = 400.0
margin_right = 57.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 4 )]
layer = 3
offset = Vector2( -1280, 0 )
transform = Transform2D( 1, 0, 0, 1, -1280, 0 )

[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
